examples/bad/auto_assignment4.latf
auto f(int x) {
    return lambda (int y) -> int {
        return x + y;
    };
}

int main() {
    auto g = f(-5);

    int x;
    g = lambda (int z, int y) -> int . z + y; // error - incompatible types

    return 0;
}